@@ -4,7 +4,8 @@
 
 	* lib/rubygems/specification.rb:  Check bindir for executables, not
 	  root.  Bug reported by David Chelimsky.  Remove Time.today, no way
-	  to override it before RubyGems loads.
+	  to override it before RubyGems loads.  Raise Gem::Exception for
+	  #installation_path when not installed.  Bug #25741 by Daniel Berger.
 	* lib/rubygems/commands/cleanup_command.rb:  Clean up --user-install
 	  gems.  Bug #25516 by Brett Eisenberg.
 	* lib/rubygems/uninstaller.rb:  Uninstall executables from the correct
